# packlang

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  PLAN.md  README.md  opencode.jsonc  packc.c  skills-lock.json
.agents/skills/assembly-arm/references/: reference.md
.agents/skills/assembly-riscv/: SKILL.md
.agents/skills/assembly-riscv/references/: riscv-abi.md
.agents/skills/assembly-x86/references/: reference.md
.agents/skills/bazel/: SKILL.md
.agents/skills/bazel/references/: bazel-cpp-toolchain.md
.agents/skills/binary-hardening/: SKILL.md
.agents/skills/binary-hardening/references/: hardening-flags.md
.agents/skills/build-acceleration/: SKILL.md
.agents/skills/clang/references/: flags.md  (+1 more)
.agents/skills/concurrency-debugging/: SKILL.md
.agents/skills/cpp-coroutines/: SKILL.md
.agents/skills/cpp-modules/: SKILL.md
.agents/skills/cpp-templates/: SKILL.md
.agents/skills/debug-optimized-builds/: SKILL.md
.agents/skills/dwarf-debug-format/: SKILL.md
.agents/skills/gcc/: SKILL.md
.agents/skills/hardware-counters/: SKILL.md
.agents/skills/include-what-you-use/: SKILL.md
.agents/skills/intel-vtune-amd-uprof/: SKILL.md
.agents/skills/linux-kernel-modules/: SKILL.md
.agents/skills/lldb/: SKILL.md
.agents/skills/make/: SKILL.md
.agents/skills/ninja/: SKILL.md
.github/workflows/: ci.yml
.opencode/: AGENTS.md  state.md
examples/: arr.pack  conditional.pack  fn.pack  hello.pack  scope.pack  str.pack  struct.pack  struct_fn.pack  typed.pack  while.pack
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_main.cpp
(+30 files in other folders)
